knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Opportunity_List_User_Filter__c/fields/pqcrush__AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__AccountPlan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>pqcrush__Account_Plan__c</referenceTo>
    <relationshipLabel>Opportunity List User Filters</relationshipLabel>
    <relationshipName>Opportunity_List_User_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>