knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Opportunity_List_User_Filter__c/fields/pqcrush__Filters__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Filters__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>Stores filters as a json string</description>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>